--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"date-fns": "^2.30.0"
+	}
 }
