--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"date-fns": "^2.30.0"
+		"@threlte/core": "^7.0.12",
+		"@threlte/extras": "^8.1.1",
+		"date-fns": "^2.30.0",
+		"three": "^0.160.0"
 	}
 }
