--- a/package.json
+++ b/package.json
@@ -39,8 +39,16 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@dimforge/rapier3d-compat": "^0.11.2",
+		"@theatre/core": "^0.7.0",
+		"@theatre/studio": "^0.7.0",
 		"@threlte/core": "^7.0.12",
 		"@threlte/extras": "^8.1.1",
+		"@threlte/flex": "^1.0.0",
+		"@threlte/rapier": "^1.1.4",
+		"@threlte/theatre": "^2.1.5",
+		"@threlte/xr": "^0.1.2",
+		"@types/three": "^0.160.0",
 		"date-fns": "^2.30.0",
 		"three": "^0.160.0"
 	}
